gcc/testsuite/gdc.test/compilable/imports/pr9471a.d
import imports.pr9471c;
class AggregateDeclaration : ScopeDsymbol { }
