gcc/testsuite/gdc.test/fail_compilation/imports/test15897.d
module imports.test15897;
import test15897;

class Cat : Animal
{
}
